change get() to orElseThrow() in attempt to avoid exception